fix: enhance jGrowl notification styles in default-dynamix.css by adding box-shadow for better visibility

--- a/emhttp/plugins/dynamix/styles/default-dynamix.css
+++ b/emhttp/plugins/dynamix/styles/default-dynamix.css
@@ -119,26 +119,6 @@
     margin-left: auto;
     margin-right: auto;
 }
-.jGrowl-notification.alert {
-    color: var(--dynamix-jgrowl-alert-text-color);
-    background-color: var(--dynamix-jgrowl-alert-bg-color);
-    border: 1px solid var(--dynamix-jgrowl-alert-border-color);
-}
-.jGrowl-notification.warning {
-    color: var(--dynamix-jgrowl-warning-text-color);
-    background-color: var(--dynamix-jgrowl-warning-bg-color);
-    border: 1px solid var(--dynamix-jgrowl-warning-border-color);
-}
-.jGrowl-notification.normal {
-    color: var(--dynamix-jgrowl-normal-text-color);
-    background-color: var(--dynamix-jgrowl-normal-bg-color);
-    border: 1px solid var(--dynamix-jgrowl-normal-border-color);
-}
-.jGrowl-notification.default {
-    color: var(--dynamix-jgrowl-text-color);
-    background-color: var(--dynamix-jgrowl-bg-color);
-    border: 1px solid var(--dynamix-jgrowl-border-color);
-}
 .jGrowl-notification {
     opacity: 0.96;
     min-height: 1.2rem;
@@ -147,6 +127,29 @@
     margin: 5px 0;
     text-align: left;
     border-radius: 6px;
+}
+.jGrowl-notification.alert {
+    color: var(--dynamix-jgrowl-alert-text-color);
+    background-color: var(--dynamix-jgrowl-alert-bg-color);
+    border: 1px solid var(--dynamix-jgrowl-alert-border-color);
+    box-shadow: 2px 2px 1px var(--dynamix-jgrowl-shadow-color);
+}
+.jGrowl-notification.warning {
+    color: var(--dynamix-jgrowl-warning-text-color);
+    background-color: var(--dynamix-jgrowl-warning-bg-color);
+    border: 1px solid var(--dynamix-jgrowl-warning-border-color);
+    box-shadow: 2px 2px 1px var(--dynamix-jgrowl-shadow-color);
+}
+.jGrowl-notification.normal {
+    color: var(--dynamix-jgrowl-normal-text-color);
+    background-color: var(--dynamix-jgrowl-normal-bg-color);
+    border: 1px solid var(--dynamix-jgrowl-normal-border-color);
+    box-shadow: 2px 2px 1px var(--dynamix-jgrowl-shadow-color);
+}
+.jGrowl-notification.default {
+    color: var(--dynamix-jgrowl-text-color);
+    background-color: var(--dynamix-jgrowl-bg-color);
+    border: 1px solid var(--dynamix-jgrowl-border-color);
     box-shadow: 2px 2px 1px var(--dynamix-jgrowl-shadow-color);
 }
 .jGrowl-notification .jGrowl-header {
